LayoutWindow remembers the number of views, display mode, and showing axes between sessions.
git-svn-id: svn://svn.code.sf.net/p/aoi/code@241 8e91ba97-c92a-0410-817f-f646a3b87f38